--- a/src/components/Gallery/GalleryCard/Gallerycard.css
+++ b/src/components/Gallery/GalleryCard/Gallerycard.css
@@ -11,7 +11,9 @@
     justify-content: center;
     z-index: 2;
 }
-
+.see-more-button{
+    background-color: rgba(0, 0, 0, 0.7);   
+}
 /* Style for the close button */
 .close-button {
     position: absolute;
